kubernetes/workloads/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: 'jellyfin/jellyfin:10.11.11'
          ports:
            - containerPort: 8096
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: movies
              mountPath: /movies
            - name: series
              mountPath: /series
            - name: dev-dri
              mountPath: /dev/dri
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "300m"
              memory: "400Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            privileged: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: movies
          persistentVolumeClaim:
            claimName: movies
            readOnly: false
        - name: series
          persistentVolumeClaim:
            claimName: series
            readOnly: false
        - name: dev-dri
          hostPath:
            path: /dev/dri
