kubernetes/workloads/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.pynenborg.com
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jellyfin.pynenborg.com
      secretName: jellyfin-tls
